fix:table content alignment and padding issue in hitech

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/navigation2.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/navigation2.less
@@ -7,7 +7,7 @@
   .cmp-navigation {
   	padding-left:0;
     overflow: auto;
-    max-height:53vh;
+    max-height:50vh;
     scrollbar-width: thin;
   }
   .cmp-navigation__col-icon {
@@ -262,6 +262,13 @@ html.adobeguides-text-size {
     }
 }
 
+html.adobeguides-text-size {
+    .navigation {
+        .cmp-navigation {
+          max-height: 31vh;
 
+        }
+      }
+    }
 
 
